--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
 	id 'org.springframework.boot' version '2.1.4.RELEASE'
 	id 'java'
+	id "com.palantir.docker" version "0.22.1"
 }
 
 apply plugin: 'io.spring.dependency-management'
@@ -62,6 +63,7 @@ dependencyManagement {
 	}
 }
 
+// tag::task[]
 bootRun {
 	systemProperty 'spring.profiles.active', 'local'
 
@@ -79,4 +81,18 @@ task itest(type: Test, group: 'Verification') {
 	classpath = sourceSets.itest.runtimeClasspath
 }
 
+task unpack(type: Copy) {
+	dependsOn bootJar
+	from(zipTree(tasks.bootJar.outputs.files.singleFile))
+	into("build/dependency")
+}
+
+docker {
+	name "shariqhirani/${rootProject.name}"
+	copySpec.from(tasks.unpack.outputs).into("dependency")
+	buildArgs(['DEPENDENCY': "dependency"])
+}
+// end::task[]
+
 tasks.check.dependsOn itest
+tasks.docker.dependsOn build
